tests/ui/rfcs/rfc-2497-if-let-chains/chains-without-let.stderr
error[E0381]: used binding `z` is possibly-uninitialized
  --> $DIR/chains-without-let.rs:8:31
   |
LL |     let z;
   |         - binding declared here but left uninitialized
LL |     true && { z = 3; true} && z == 3;
   |               -----           ^ `z` used here but it is possibly-uninitialized
   |               |
   |               binding initialized here in some conditions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
